Use apache http client in config proxy
To be able to use DefaultHttpRequestRetryStrategy, which will retry
responses with status codes 429 and 503 and retries requests when getting these