@@ -5,7 +5,7 @@ import org.junit.jupiter.api.io.TempDir;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Files;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -18,8 +18,8 @@ public class UrlDownloaderTest {
 
     @Test
     public void testFileDownload() throws IOException {
-        URL url = new URL("https://docs.vespa.ai/foo");
-        var downloader = new UrlDownloader(url, new DownloadOptions(null));
+        URI uri = URI.create("https://docs.vespa.ai/foo");
+        var downloader = new UrlDownloader(uri, new DownloadOptions(null));
 
         assertFalse(downloader.alreadyDownloaded(temporaryFolder));
 
